--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
+:root {
+  --black: #000;
+  --white: #fff;
+  --light-white: #f7f7f7;
+  --light-white2: #f1f1f1;
+  --link-clr: #6e8efb;
+  --msg-bg: #0084ff;
+  --body-bg: linear-gradient(135deg, #6e8efb, #a777e3);
+}
+
 *,
 *::after,
 *::before {
@@ -22,6 +32,8 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   font-family: "Ubuntu", sans-serif;
+  background: var(--body-bg);
+  color: var(--black);
 }
 
 #Root {
@@ -59,4 +71,44 @@ svg {
 
 [hidden] {
   display: none;
+}
+
+input::placeholder {
+  color: #bbb;
+}
+
+/* some common css for multiple components  */
+.user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  transition: 0.1s;
+}
+.user:hover {
+  background-color: var(--light-white);
+}
+.user img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 0.4rem solid var(--link-clr);
+  object-fit: cover;
+}
+
+.userInfo span {
+  font-weight: 700;
+}
+.userInfo p {
+  font-size: 1.4rem;
+}
+
+.error {
+  text-align: center;
+  color: #ff0000;
+}
+
+@media screen and (max-width: 575px) {
+  .userInfo p {
+    display: none;
+  }
 }
