--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,7 +91,8 @@ input::placeholder {
   width: 4rem;
   height: 4rem;
   border-radius: 50%;
-  border: 0.4rem solid var(--link-clr);
+  border: none;
+  outline: 0.4rem solid var(--link-clr);
   object-fit: cover;
 }
 
