--- a/src/styles/Chat.module.css
+++ b/src/styles/Chat.module.css
@@ -1,11 +1,59 @@
+/* .chat {
+  flex: 3;
+}
+.activeUser {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  background: #e2e9ff;
+  border-radius: 1rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 0.125rem 0.25rem;
+  margin-left: 2rem;
+}
+@media screen and (max-width: 575.98px) {
+  .active-user div {
+    justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 400px) {
+  .active-user {
+    background: #fff;
+  }
+} */
+
 .chat {
   flex: 3;
 }
 .activeUser {
   height: 5rem;
+  display: flex;
+  align-items: center;
 }
+.user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  transition: 0.1s;
+  margin: 0 1rem;
+}
+.user img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 0.4rem solid var(--link-clr);
+  object-fit: cover;
+}
+
 @media screen and (max-width: 575.98px) {
   .active-user div {
     justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 400px) {
+  .activeUser {
+    justify-content: end;
+  }
+  .user .hide {
+    display: none;
   }
 }
