--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -11,10 +11,17 @@
   cursor: pointer;
   background-color: var(--white);
   color: var(--link-clr);
-  width: 4.5rem;
-  height: 4.5rem;
+  min-width: 4rem;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   display: grid;
   place-items: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+}
+
+@media (max-width: 575.98px) {
+  .hide {
+    display: none;
+  }
 }
