--- a/src/styles/Register.module.css
+++ b/src/styles/Register.module.css
@@ -5,7 +5,6 @@
 }
 .container {
   background-color: var(--white);
-  min-width: 40rem;
   padding: 3rem 4rem 4rem;
   border-radius: 1rem;
 }
@@ -42,4 +41,10 @@
 
 .msg a {
   color: var(--link-clr);
+}
+
+@media (max-width: 400px) {
+  .container {
+    padding: 3rem 2rem;
+  }
 }
