--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -109,6 +109,9 @@ input::placeholder {
 }
 
 @media screen and (max-width: 575px) {
+  .userInfo {
+    line-height: 1.2;
+  }
   .userInfo p {
     display: none;
   }
